--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,14 @@
 
 buildscript {
     repositories {
-        google()
         jcenter()
-        
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.1'
-        
+        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath "com.github.dcendents:android-maven-gradle-plugin:1.4.1"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,9 +17,8 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
-        
+        google()
     }
 }
 
